Version 2.02.71 -
===============================
  Do not log backtrace in valid _lv_resume() code path.
  Cleanup help strings in configure.in.
  Prompt if metadataignore with vgextend or pvchange would adjust vg_mda_copies.
  Adjust vg_mda_copies if metadataignore given with vgextend or pvchange.
  Adjust auto-metadata repair and caching logic to try to cope with empty mdas.

Version 2.02.70 - 6th July 2010
===============================
  Remove log directly if all mirror images of a mirrored log fail.
  Randomly select which mdas to use or ignore.
  Add some missing standard configure.in checks.
  Add printf format attributes to yes_no_prompt and fix a caller.
  Always pass unsuspended dm devices through persistent filter to other filters.
  Move test for suspended dm devices ahead of other filters.
  Fix another segfault in clvmd -R if no response from daemon. (2.02.68)
  Remove superfluous suspended device counter from clvmd.
  Fix lvm shell crash when input is entirely whitespace.
  Update partial mode warning message.
  Preserve memlock balance in clvmd when activation triggers a resume.
  Restore the removemissing behaviour of lvconvert --repair --use-policies.

Version 2.02.69 - 30th June 2010
================================
  Fix vgremove to allow removal of VG with missing PVs. (2.02.52)
  Add metadata/vgmetadatacopies to lvm.conf.
  Add --metadataignore to pvcreate and vgextend.
  Add vg_mda_copies, pv_mda_used_count and vg_mda_used_count to reports.
  Describe --vgmetadatacopies in lvm.conf and other man pages.
  Add --[vg]metadatacopies to select number of mdas to use in a VG.
  Make the metadata ignore bit control read/write metadata areas in a PV.
  Add pvchange --metadataignore to set or clear a metadata ignore bit.
  Refactor metadata code to prepare for --metadataignore / --vgmetadatacopies.
  Ensure region_size of mirrored log does not exceed its full size.
  Generate liblvm2app exported symbols from header file.